Meta-strip corrupt #92847

Closed
opened 2021-11-05 12:17:45 +01:00 by Dalai Felinto · 8 comments

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-05 02:45, hash: 1b6238edba
Worked: 2.93

Short description of error
A file (created in the sprite fright branch) has a meta-strip with some invalid state. If I try to move the meta-strip it jumps to frame 1. The error happens in the branch, but also in 3.0 or master (3.1).

Exact steps for others to reproduce the error

  • Drag meta-strip.
  • Notice how the strip jumps to frame 1.

edit-broken.blend

**Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-05 02:45, hash: `1b6238edba` Worked: 2.93 **Short description of error** A file (created in the sprite fright branch) has a meta-strip with some invalid state. If I try to move the meta-strip it jumps to frame 1. The error happens in the branch, but also in 3.0 or master (3.1). **Exact steps for others to reproduce the error** * Drag meta-strip. * Notice how the strip jumps to frame 1. [edit-broken.blend](https://archive.blender.org/developer/F11730318/edit-broken.blend)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Richard Antalik was assigned by Dalai Felinto 2021-11-05 12:18:59 +01:00
Author
Owner

Hi Richard, could you take a look at that? Maybe it is just an invalid file because it was created in the branch. But worth at least looking at it.
Feel free to set the priority and confirm/archive accordingly.

Hi Richard, could you take a look at that? Maybe it is just an invalid file because it was created in the branch. But worth at least looking at it. Feel free to set the priority and confirm/archive accordingly.
Author
Owner

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Uploading decompressed file to test on blender-v2.93-release branch. Can confirm BTW.

(in addition to this issue: name is also not visible on strip but it can be seen on 2.93.6)

Uploading decompressed file to test on `blender-v2.93-release` branch. Can confirm BTW. (in addition to this issue: name is also not visible on strip but it can be seen on 2.93.6)
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 4d09a692e2

This issue was referenced by 4d09a692e22add0a8341916d2d79a594bff076a3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92847
No description provided.